Add BND configuration for `log4j-core` and new modules
The following packages are no longer exported:

 *  org.apache.logging.log4j.core.layout.internal
 *  org.apache.logging.log4j.core.message
 *  org.apache.logging.log4j.core.time.internal
 *  org.apache.logging.log4j.core.tools.picocli
 *  org.apache.logging.log4j.core.util.internal

A new JPMS module is generated, which sets the following Java modules as
optional:
 *  java.compiler,
 *  java.logging,
 *  java.naming,
 *  java.sql.

All the new 3.x modules are configured to use BND.